--- a/app/src/main/res/layout/launcher_activity.xml
+++ b/app/src/main/res/layout/launcher_activity.xml
@@ -25,6 +25,16 @@
         android:text="NotLifecycle"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/multiInitialize"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nonLifecycle"
+        android:text="MultiInitialize"
+        tools:ignore="HardcodedText" />
+
     <TextView
         android:id="@+id/instanceId"
         android:layout_width="wrap_content"
